# ltsp5

./: .bzrignore  ChangeLog  Makefile  TODO  autogen.sh  ltsp-common-functions  ltsp.spec  mkdist.sh  release.conf
client/: configure-x.sh  init-ltsp  init-ltsp.1  initramfs-scripts  ldm  ldm-askpass  ldm-swapon  ldm.1  lts-parameters.txt  ltsp-client-common-functions  ltsp-client-functions  ltsp_config  ltsp_functions  monitor_nbd  nbd-disconnect  rdesktop.sh  screen-x-common  screen_session  start_printer  start_telnet  telnet_loop  update-kernels  xinitrc
client/Debian/: update-kernels.conf
client/Debian/nbd-proxy/: configure.ac  proto.txt
client/chroot-setup/: README
client/getltscfg/: Makefile  getltscfg.1  getltscfg.c  getltscfg.h  lts.conf  parser.y
client/getltscfg-cluster/: getltscfg-cluster  getltscfg-cluster.1  inventory
client/greeters/: greeter.glade  greeter.gladep  gtk
client/initramfs/: ltsp
client/initramfs-scripts.d/: 00-upstart
client/initscripts/: ltsp-bindmounts  ltsp-core  ltsp-core.upstart  ltsp-init-common  ltsp-setup  ltsp-setup.default
client/jetpipe/: jetpipe
client/ldm2/: ChangeLog  Makefile.am  Makefile.in  README  autogen.sh  configure  configure.ac
client/ldm2-0.1/: Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac
client/ldm2-0.1/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
client/ldm2-0.1/man/: Makefile.am  Makefile.in
client/ldm2-0.1/scripts/: Makefile.in  S10-delayed-mounter
client/ldm2-0.1/share/: Makefile.in
client/ldm2-0.1/src/: Makefile.am  Makefile.in  get_ip.c  greeter_iface.c  ldm.c  ldm.h  sshutils.c
client/ldmgtkgreet/: Makefile.in  README  configure  configure.ac
client/ldmgtkgreet-0.1/: Makefile.am  aclocal.m4  configure  configure.ac
client/ldmgtkgreet-0.1/autom4te.cache/: output.0  traces.0
client/ldmgtkgreet-0.1/gtkrc/: Makefile.in
client/ldmgtkgreet-0.1/pixmaps/: Makefile.in
client/ldmgtkgreet-0.1/src/: Makefile.am  Makefile.in  greeter.c
client/ldmgtkgreet/gtkrc/: Makefile.am  Makefile.in  greeter-gtkrc
client/ldmgtkgreet/pixmaps/: Makefile.am  Makefile.in
client/ldmgtkgreet/src/: Makefile.am  Makefile.in  greeter.c  greeter.h  hostwin.c  langwin.c  ldminfo.c  ldminfo.h  sesswin.c
client/ldmgtkgreet/themes/Debian/: greeter-gtkrc
client/ldmgtkgreet/themes/kubuntu/: greeter-gtkrc
client/localapps/: Makefile.am  autogen.sh  ltsp-genmenu  ltsp-localapps  ltsp-localappsd  ltsp-remoteapps  ltsp-remoteappsd
client/lp_server/: CHANGES  Copyright  LICENSE  Makefile.in  README  VERSION  config.h.in  configure  configure.in
client/ltsp_config.d/: 05ltsp-4-compat  10ltsp-server  15default-screen  16default-tty  20fatclients  25sound  30localdev  35encrypted-swap  40localapps  45nc-q-compat  99ltsp-config
client/mkinitramfs/: initramfs-common
client/nbd-proxy/: AUTHORS
client/rwtab.d/: k12linux.rwtab
client/screen-session.d/: README  S00-setvars  S01-xrandr  S98-virtual  XS00-halt-reboot  XS00-setvars  XS00-xorg-conf-functions  XS01-colordepth  XS01-intel-virtual  XS20-intel-virtual-hack  XS20-xserver-geode-gx2-hack  XS20-xserver-ppc-r128-hack  XS70-xserver-geode-gx2-hack  XS70-xserver-ppc-r128-hack  XS80-monitor-options  XS80-sync-ranges  XS80-x-modes  XS85-virtual  XS85-xmodule  XS85-xserver  XS85-xserver-device-options  XS85-xvideoram  XS90-assembleXorgConf  XS95-colordepth  XS97-xserver-geode-gx2-hack  XS98-sync-ranges  XS98-xmodule  XS98-xserver  XS99-assembleXorgConf
client/screen.d/: kiosk  ldm  menu  rdesktop  sdm  shell  ssh  startx  telnet  xdmcp  xfreerdp  xterm
client/scripts/: mkinitrd-ltsp
client/share/: ltsp-cleanup  ltsp-client-common-functions
client/themes/: default
client/udev/: 88-ltsp-sound.rules  Makefile.am  ltsp-sound
client/xinitrc.d/: I00-cluster  I00-xauth  I10-sound  I10-x-keyboard-settings  I10-xrandr
client/xrexecd/: Makefile.am  configure.ac  xrexec  xrexecd.sh
client/xrexecd/ldm-rc.d/: S01-localapps
client/xrexecd/src/: Makefile.am  xatomwait.c  xrexecd.c
common/: ltsp-common-functions
debian/: NEWS  README.Debian  TODO.Debian  changelog  control  control.Debian  control.Ubuntu  control.in  controlgen  copyright  ldm.examples  ldm.install  ldm.manpages  ldm.postinst  ldm.prerm  ltsp-client-builder.postinst  ltsp-client-builder.templates  ltsp-client-core.examples  ltsp-client-core.init  ltsp-client-core.install  ltsp-client-core.links  ltsp-client-core.ltsp-client-setup.default  ltsp-client-core.ltsp-client-setup.init  ltsp-client-core.manpages  ltsp-client-core.preinst  ltsp-client-core.templates  ltsp-client.dirs  ltsp-client.examples  ltsp-client.init  ltsp-client.install  ltsp-client.ltsp-client-setup.default  ltsp-client.ltsp-client-setup.init  ltsp-client.manpages  ltsp-client.preinst  ltsp-client.templates  ltsp-server-standalone.install  ltsp-server-standalone.postinst  ltsp-server.dirs  ltsp-server.docs  ltsp-server.examples  (+5 more)
examples/: dhcpd.conf
localapps/: Makefile.am  ltsp-genmenu  ltsp-localapps  ltsp-localappsd  ltsp-open  ltsp-remoteapps  ltsp-remoteappsd
nbd-proxy/: ChangeLog  NEWS  README  config.h.in  configure.ac
obsolete/: README-OBSOLETE
po/: Makefile  README  am.po  ar.po  bs.po  ca.po  ce.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ko.po  ku.po  lt.po  ltsp.pot  ms.po  nb.po  nl.po  nn.po  oc.po  pl.po  pt.po  (+16 more)
server/: 80_ltsp-sound  dhcpd.conf  ldminfod  ltsp-build-client  ltsp-build-client.conf  ltsp-chroot  ltsp-config  ltsp-dnsmasq-conf  ltsp-info  ltsp-keys  ltsp-server-functions  ltsp-swapfile-delete  ltsp-update-image  ltsp-update-kernels  ltsp-update-sshkeys  nbd-update-config  nbdrootd  nbdswapd
server/man/: Makefile.am  configure.ac
server/man/include/: common.h2m  ltsp-build-client.h2m  ltsp-chroot.h2m  ltsp-config.h2m  ltsp-info.h2m  ltsp-update-image.h2m  ltsp-update-kernels.h2m  ltsp-update-sshkeys.h2m
vmclient/: config-vmclient  ifcfg-ltspbr0  launch-vmclient  ltsp-qemu-bridge-ifup  ltsp-vmclient
(+1099 files in other folders)
