AC_PREREQ(2.59)
AC_INIT(ldm2, [0.1], [sbalneav@ltsp.org])
AC_CONFIG_SRCDIR([src/ldm.c])
AM_INIT_AUTOMAKE

AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE
# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT

# Checks for Libraries
AC_HAVE_LIBRARY(util)

AC_OUTPUT(Makefile src/Makefile)
